--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -66,6 +66,7 @@ jobs:
   slots-swapping:
     name: "Swapping Pre-Production & Production Slots"
     runs-on: windows-latest
+    needs: ["build"]
     environment:
       name: "Production"
 
