--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -58,8 +58,8 @@ jobs:
         id: backend-preprod-deployment
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_API_APPLICATION_NAME }}
-          slot-name: ${{ env.AZURE_STAGING_SLOT }}
+          app-name: "ih-tst-api-v1"
+          slot-name: "Staging"
           publish-profile: ${{ secrets.AZURE_WEBAPP_API_PUBLISH_PROFILE }}
           package: ${{env.DOTNET_ROOT}}/myapp
 
