--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -52,16 +52,15 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\myapp
 
       - name: Deploy to Azure Web App
         id: backend-preprod-deployment
         uses: azure/webapps-deploy@v2
         with:
           app-name: "ih-tst-api-v1"
-          slot-name: "Staging"
           publish-profile: ${{ secrets.AZURE_WEBAPP_API_PUBLISH_PROFILE }}
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: ${{env.DOTNET_ROOT}}\myapp
 
   slots-swapping:
     name: "Swapping Pre-Production & Production Slots"
