--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -65,7 +65,7 @@ jobs:
 
   slots-swapping:
     name: "Swapping Pre-Production & Production Slots"
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: ["build"]
     environment:
       name: "Production"
